# cpp-custom-triplets

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  cpp-custom-triplets.code-workspace
src/: main.cpp
